refactor: remove department permissions (#184)
